--- a/templates/orgs/user_edit.html
+++ b/templates/orgs/user_edit.html
@@ -32,7 +32,9 @@
     </div>
     <div class="buttons">
       {% if user.settings.email_status != 'V' %}
-        <div onclick="goto(event)" href="{% url 'orgs.user_send_verification_email' %}" class="button-light">{% trans "Verify Email" %}</div>
+        <div onclick="handlePosterizeClick(event)"
+             href="{% url 'orgs.user_send_verification_email' %}"
+             class="button-light posterize">{% trans "Verify Email" %}</div>
       {% endif %}
     </div>
   </div>
