--- a/templates/api/v2/explorer.html
+++ b/templates/api/v2/explorer.html
@@ -10,7 +10,7 @@
       <li>
         <a href="/">{{ branding.name }}</a>
         <span class="divider">&rsaquo;</span>
-        <a href="{% url 'api.v2' %}">API v2</a>
+        <a href="{% url 'api.v2.root' %}">API v2</a>
         <span class="divider">&rsaquo;</span>
       </li>
       <li class="mr-4 ml-1">
