--- a/templates/orgs/user_token.html
+++ b/templates/orgs/user_token.html
@@ -9,7 +9,7 @@
       {% endblocktrans %}
     </div>
     <div class="buttons">
-      <div onclick="goto(event)" href="{% url 'api.v2' %}" class="button-light">{% trans "API Docs" %}</div>
+      <div onclick="goto(event)" href="{% url 'api.v2.root' %}" class="button-light">{% trans "API Docs" %}</div>
     </div>
   </div>
 {% endblock summary %}
