Tweak button styling

--- a/templates/api/v2/docs.html
+++ b/templates/api/v2/docs.html
@@ -2,6 +2,6 @@
 {% load i18n %}
 
 {% block api-menu %}
-  <a class="button ml-4" href="{% url "api.v2.root" %}">{% trans "Endpoints" %}</a>
-  <a class="button ml-4" href="{% url "api.v2.explorer" %}">{% trans "Explorer" %}</a>
+  <a class="button-light ml-4" href="{% url "api.v2.root" %}">{% trans "Endpoints" %}</a>
+  <a class="button-light ml-4" href="{% url "api.v2.explorer" %}">{% trans "Explorer" %}</a>
 {% endblock api-menu %}
