--- a/templates/tickets/ticket_list.html
+++ b/templates/tickets/ticket_list.html
@@ -63,7 +63,10 @@
     }
 
     .spa-content {
-      padding: 0;
+      padding-left: 0;
+      padding-right: 0;
+      padding-top: 0;
+      padding-bottom: 1em;
     }
 
     #folder-title {
