--- a/templates/flows/flow_editor.html
+++ b/templates/flows/flow_editor.html
@@ -23,7 +23,8 @@
   <style type="text/css">
     .spa-content {
       margin-bottom: 0;
-      padding-bottom: 0;
+      padding-bottom: 0px !important;
+
     }
 
     .more .submenu {
@@ -41,6 +42,11 @@
       z-index: 0;
       border: 0px solid #e7e7e7;
       margin-top: 0px;
+      margin-left: -1.2em;
+      margin-right: -1.2em;
+      margin-bottom: 0em;
+      border-radius: 0px;
+
     }
 
     .simulator {
@@ -103,9 +109,7 @@
       right: 4em !important;
     }
 
-    .pop_wrapper.pop_invisible {
-      margin-right: 1.3em;
-    }
+    .pop_wrapper.pop_invisible {}
 
     .flow_node {
       box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, .05);
