--- a/templates/frame.html
+++ b/templates/frame.html
@@ -52,6 +52,11 @@
         }
       }
 
+      function handleMenuListSelection(evt) {
+        document.activeElement.blur()
+        gotoURL(evt.detail.selected.target_url);
+      }
+
       // set our initial title
       document.addEventListener("DOMContentLoaded", function(event) {
         const titleText = document.querySelector("#title-text");
@@ -161,6 +166,7 @@
                             onchange="handleMenuChanged(event)"
                             -temba-button-clicked="handleMenuClicked(event)"
                             -temba-ready="handleMenuReady"
+                            -temba-selection="handleMenuListSelection"
                             class="{% if servicing %}{% endif %}"
                             id="nav">
                   {% block menu-header %}
